<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Aid "
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/R1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        >

        <!--text view for heading-->
        <TextView
            android:id="@+id/idTVHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="28sp" />

        <!--edit text for user name-->
        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVHeader"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/enter_username"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#A8DDC8C8" />

        <!--edit text for user password-->
        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edUsername"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#A8DDC8C8" />


        <!--button to register our new user-->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_user" />

    </RelativeLayout>

    <TextView
        android:id="@+id/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignup"
        app:layout_constraintEnd_toStartOf="@id/btnSignup"
        app:layout_constraintStart_toStartOf="@id/R1"
        app:layout_constraintTop_toTopOf="@+id/btnSignup" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/signup"

        app:layout_constraintEnd_toEndOf="@+id/R1"
        app:layout_constraintStart_toEndOf="@id/newuser"
        app:layout_constraintTop_toBottomOf="@+id/R1" />


</androidx.constraintlayout.widget.ConstraintLayout>